[F] Add frontend cache revalidation logic
Adds two new mutations:

* `frontendCacheRevalidateEntity`
* `frontendCacheRevalidateInstance`

Adds backgrounded revalidations to updateCommunity, updateCollection,
updateItem, and any time an entity's layouts are rerendered. The act
of revalidating an entity will also revalidate its parent in the
background, which will do the same for its parent, and so on all the
way up to the community. This ensures that if an entity is changed,
its changes are visible higher in the hierarchy.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -86,6 +86,10 @@ en:
       update_and_clear_attachment: "cannot receive a new attachment while also clearing it"
       rules:
         not_yet_implemented: "This mutation is not yet implemented."
+        revalidation_connection_failed: "The revalidation request failed to connect."
+        revalidation_request_failed: "The revalidation request failed."
+        revalidation_secret_invalid: "The revalidation request failed to authenticate."
+        revalidation_timeout: "The revalidation request timed out."
   frozen:
     static_property:
       title:
